@@ -7,3 +7,4 @@ void control_push_updates(void);
 void control_notify_update(Task *task);
 void control_notify_end(Task *task);
 void control_notify_error(Task *task, const char *message);
+void control_cancel_task(Task *task);
