@@ -1,4 +1,6 @@
-* Send errors when a kernel request fails.
+* Allow downloads to be cancelled.
+
+* Send errors (to ZeroProgress, etc) when a kernel request fails.
 
 * Configure check for missing expat.h.
 
